Bug #12354
It should not be possible to create persistent VNICs over temporary objects
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
hipster# dladm create-etherstub stub0 hipster# dladm create-etherstub -t stub1 hipster# dladm create-vnic -l stub0 pvnic0 hipster# dladm create-vnic -tl stub0 tvnic0 hipster# dladm create-vnic -l stub1 pvnic1 hipster# dladm create-vnic -tl stub1 tvnic1
hipster# grep vnic1 /etc/dladm/datalink.conf pvnic1 class=int,8;media=int,4;linkover=string,stub1;maddrtype=int,1;vrid=int,0;vraf=int,0;macaddr=string,2:8:20:97:1e:6d;
Updated by Andy Fiddaman 12 months ago
Testing notes:
bloody# dladm create-etherstub stub0 bloody# dladm create-etherstub -t stub1 bloody# dladm create-vnic -l stub0 pvnic0 bloody# dladm create-vnic -tl stub0 tvnic0 bloody# dladm create-vnic -l stub1 pvnic1 dladm: vnic creation over stub1 failed: can't create persistent object on top of temporary one bloody# dladm create-vnic -tl stub1 tvnic1
Updated by Electric Monk 12 months ago
- Status changed from In Progress to Closed
- % Done changed from 0 to 100
git commit 86b2c59a1c0693176ce8e6e5347f533716a6fcb0
commit 86b2c59a1c0693176ce8e6e5347f533716a6fcb0 Author: Andy Fiddaman <omnios@citrus-it.co.uk> Date: 2020-03-08T11:18:36.000Z 12354 It should not be possible to create persistent VNICs over temporary objects Reviewed by: Peter Tribble <peter.tribble@gmail.com> Reviewed by: Dominik Hassler <hadfl@omniosce.org> Approved by: Robert Mustacchi <rm@fingolfin.org>